--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.7.2
 Django==5.0.1
+django-stubs==4.2.7
+django-stubs-ext==4.2.7
 psycopg2==2.9.9
 python-dotenv==1.0.0
 sqlparse==0.4.4
+types-pytz==2023.3.1.1
+types-PyYAML==6.0.12.12
+typing_extensions==4.9.0
 tzdata==2023.4
