--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 max-line-length = 100
-exclude = env
+exclude = env, migrations
 max-complexity = 8
 max-annotations-complexity = 4
 
@@ -11,3 +11,8 @@ disallow_incomplete_defs = True
 disallow_untyped_calls = True
 disallow_untyped_defs = True
 exclude = tests
+plugins =
+    mypy_django_plugin.main
+
+[mypy.plugins.django-stubs]
+django_settings_module = calorist.settings
