--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 asgiref==3.7.2
+certifi==2023.11.17
 Django==5.0.1
+django-elasticsearch-dsl==8.0
 django-stubs==4.2.7
 django-stubs-ext==4.2.7
+elastic-transport==8.12.0
+elasticsearch==8.12.0
+elasticsearch-dsl==8.12.0
 psycopg2==2.9.9
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+six==1.16.0
 sqlparse==0.4.4
 types-pytz==2023.3.1.1
 types-PyYAML==6.0.12.12
 typing_extensions==4.9.0
 tzdata==2023.4
+urllib3==2.2.0
